profilelist1exp/unpackaged/objects/Supportability_Contacts__c.object
<CustomObject>
    <description>This object is to store all supply chain contacts.  This information will enable the Sales reps to contact SCPL Team when the supportability feedback on Opportunity Line item is unclear</description>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active user</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Focus__c</fullName>
        <label>Focus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Parent_Name__c</fullName>
        <label>Regional Parent Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Sub_Parent_Name__c</fullName>
        <label>Regional Sub Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Supportability Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Contact-{0000}</displayFormat>
        <label>Supportability Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supportability Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>